*gitlab-ce-8.9.5 (09 Jul 2016)

  09 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.9.5.ebuild:
  www-apps/gitlab-ce:  Added ebuild for gitlab-8.9.5. It contains a security fix
  for CVE-2012-6684

*gitlab-ce-8.9.4 (05 Jul 2016)

  05 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.9.4.ebuild:
  www-apps/gitlab-ce:  added ebuild for version 8.9.4

*gitlab-ce-8.9.3 (01 Jul 2016)

  01 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.9.3.ebuild,
  files/gitlab-unicorn.init:
  www-apps/gitlab-ce:  added ebuild for version 8.9.3 and updated init script.
  now, individual restart of sidekiq is possible

*gitlab-ce-8.9.2 (28 Jun 2016)

  28 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.9.2.ebuild:
  www-apps/gitlab-ce:  Added ebuild for www-apps/gitlab-ce-8.9.2. This is a
  security fix.

  26 Jun 2016; Manuel Friedli <manuel@fritteli.ch>
  -files/gitlab-ce-8.7.5-fix-redis-config-path.patch, -gitlab-ce-8.7.5.ebuild,
  -gitlab-ce-8.8.1.ebuild, -gitlab-ce-8.8.2.ebuild, -gitlab-ce-8.8.3.ebuild,
  -gitlab-ce-8.8.4.ebuild, gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Purged all old versions; updated patchfile for
  gitlab-ce-9999

*gitlab-ce-8.9.1 (26 Jun 2016)

  18 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.9.1.ebuild:
  Added ebuild for www-apps/gitlab-ce-8.9.1

*gitlab-ce-8.8.5 (18 Jun 2016)

  18 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.8.5.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  added ebuild for version 8.8.5 and updated dependencies
  for version 9999 (git master)

*gitlab-ce-8.8.4 (13 Jun 2016)

  13 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.8.4.ebuild:
  Added ebuild for www-apps/gitlab-ce-8.8.4

  07 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +ChangeLog:
  Added ChangeLog